k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-promesa
  labels:
    app: project-promesa
    project: promesa-midtown
